--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ canvas.page-canvas{width:100%;height:100%;display:block;background:#fff}
     
     
 /* ===== CONFIG ===== */
-const PDF_URL = "https://cdn.jsdelivr.net/gh/elijah-design/portfolio-flipbook/2025%20cv%20portfolio%20no%20password.pdf";
+const PDF_URL = "https://cdn.jsdelivr.net/gh/elijah-design/portfolio/cv%20portfolio%20spread.pdf";
 const DOWNLOAD_PASSWORD = "Portfolio2025";
 /* ================== */
 
