--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div id="book"></div>
   </div>
 
-  <!-- PDF.js -->
   <script src="libs/pdf.min.js"></script>
   <script src="libs/pdf.worker.min.js"></script>
+  <script src="libs/page-flip.browser.min.js"></script>
   <script src="js/flipbook.js"></script>
 </body>
 </html>
