--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div id="book"></div>
   </div>
 
-<script src="libs/pdf.min.js"></script>
-<script src="libs/pdf.worker.min.js"></script>
-<script src="libs/page-flip.browser.min.js"></script>
-<script src="js/flipbook.js"></script>
-
+  <!-- IMPORTANT: Load these in this order -->
+  <script src="libs/pdf.min.js"></script>
+  <script src="libs/pdf.worker.min.js"></script>
+  <script src="libs/page-flip.browser.min.js"></script>
+  <script src="js/flipbook.js"></script>
 </body>
 </html>
