--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   <script src="libs/pdf.min.js"></script>
   <script src="libs/pdf.worker.min.js"></script>
   <script src="libs/page-flip.browser.min.js"></script>
+  <script src="js/flipbook.js"></script>
 
   <script>
     const PDF_URL = "https://cdn.jsdelivr.net/gh/elijah-design/portfolio/cv%20portfolio%20spread.pdf";
